# ns-reset-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  prd.md  vite.config.ts
src/: App.css  App.tsx  BreatheFlow.tsx  CheckIn.tsx  Done.tsx  History.tsx  MeditateFlow.tsx  MoveSession.tsx  Picker.tsx  Settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon-pulse.rgba  tray-icon.rgba
src-tauri/src/: lib.rs  main.rs
